--- a/roles/puppet/vars/RedHat.yml
+++ b/roles/puppet/vars/RedHat.yml
@@ -11,3 +11,6 @@ puppet_agent_package_name: puppet-agent-{{ puppet_agent_version }}*
 # RPM URL
 puppet_yum_rpm: https://yum.puppet.com/puppet{{ puppet_major_version }}/puppet{{ puppet_major_version }}-release-el-7.noarch.rpm
 puppet_gpg_key: https://yum.puppetlabs.com/RPM-GPG-KEY-puppetlabs
+
+# RPM URL for Puppet tools
+puppet_tools_yum_rpm: https://yum.puppet.com/puppet-tools-release-el-7.noarch.rpm
