--- a/roles/puppet/vars/Debian.yml
+++ b/roles/puppet/vars/Debian.yml
@@ -11,3 +11,6 @@ puppet_agent_package_name: puppet-agent={{ puppet_agent_version }}*
 # DEB URL
 puppet_apt_deb: https://apt.puppetlabs.com/puppet{{ puppet_major_version }}-release-{{ ansible_distribution_release }}.deb
 puppet_apt_key: https://apt.puppetlabs.com/DEB-GPG-KEY-puppetlabs
+
+# RPM URL for Puppet tools
+puppet_tools_apt_deb: https://apt.puppet.com/puppet-tools-release-{{ ansible_distribution_release }}.deb
