--- a/roles/puppet/tasks/main.yml
+++ b/roles/puppet/tasks/main.yml
@@ -25,3 +25,7 @@
 - name: PUPPET | Manage Puppet Agent certificate
   import_tasks: cert.yml
   when: inventory_hostname in groups['puppet_server']
+
+- name: PUPPET | Manage eHiera deployment
+  import_tasks: ehiera.yml
+  when: inventory_hostname in groups['puppet_server']
